<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Black"
    android:alpha="0.8">


    <TextView
        android:id="@+id/update_app_txt"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/forget_password_txt"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/White"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="2">

        <EditText
            android:id="@+id/forget_password_etxt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:background="@color/White"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:hint="@string/email_txt"
            android:textColorHint="@color/Black" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:background="@color/red"
            android:padding="3dp"
            android:src="@drawable/feld_email_icon2x" />
    </LinearLayout>


    <Button
        android:id="@+id/submit_forget_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn2x"
        android:text="@string/submit_btn_txt"
        android:textColor="@color/White"
        android:textSize="20sp" />




</LinearLayout>