<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Black"
    android:alpha="0.8"
    tools:context="com.mawaqaa.alrai.activity.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="2">

        <EditText
            android:id="@+id/current_password_etxt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.6"
            android:background="@color/White"
            android:gravity="center"
            android:hint="@string/current_password_txt"
            android:inputType="textPassword"
            android:textColorHint="@color/Black" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.4"
            android:background="@color/red"
            android:padding="5dp"
            android:src="@drawable/change_password2x" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="2">

        <EditText
            android:id="@+id/new_password_etxt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.6"
            android:background="@color/White"
            android:gravity="center"
            android:hint="@string/new_password_txt"
            android:inputType="textPassword"
            android:textColorHint="@color/Black" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.4"
            android:background="@color/red"
            android:padding="5dp"
            android:src="@drawable/feld_pass_icon_2x" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:gravity="right"
        android:orientation="horizontal"

        android:padding="5dp"
        android:weightSum="2">

        <EditText
            android:id="@+id/confirm_new_password_etxt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.6"
            android:background="@color/White"
            android:gravity="center"
            android:hint="@string/confirm_new_password_txt"
            android:inputType="textPassword"
            android:textColorHint="@color/Black" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.4"
            android:background="@color/red"
            android:padding="5dp"
            android:src="@drawable/feld_conform_password2x" />
    </LinearLayout>

    <Button
        android:id="@+id/change_password_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/btn2x"
        android:padding="10dp"
        android:text="@string/submit_btn_txt"
        android:textColor="@color/White"
        android:textSize="18sp" />




</LinearLayout>
