<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:alpha="0.8"
    android:orientation="vertical"
    tools:context="com.mawaqaa.alrai.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="2">

        <EditText
            android:id="@+id/login_name_etxt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.6"
            android:background="@color/White"
            android:gravity="center"
            android:hint="@string/email_txt"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/Black" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.4"
            android:background="@color/red"
            android:padding="5dp"
            android:src="@drawable/feld_email_icon2x" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="5dp"
        android:gravity="right"
        android:orientation="horizontal"

        android:padding="5dp"
        android:weightSum="2">

        <EditText
            android:id="@+id/login_password_etxt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.6"
            android:background="@color/White"
            android:gravity="center"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColorHint="@color/Black" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.4"
            android:background="@color/red"
            android:padding="5dp"
            android:src="@drawable/text_feld_password2x" />
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/btn2x"
        android:padding="10dp"
        android:text="@string/login_btn_txt"
        android:textColor="@color/White"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/login_forget_password_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:gravity="left"
            android:text="@string/login_forget_pass_txt"
            android:textColor="@color/White"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/login_create_account_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:text="@string/login_create_account_txt"
            android:textColor="@color/White"
            android:textSize="17sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/or2x" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="horizontal">


        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb_login_button"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
             />


        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/gmail_2x" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/twitter_2x" />
    </LinearLayout>


</LinearLayout>
